# KG-Constructor

./: .gitignore
kg_pipeline/: README.md  pyproject.toml
kg_pipeline/app/: cli.py  config.py  main.py
kg_pipeline/domain/: enums.py
kg_pipeline/pipeline/: base_stage.py  orchestrator.py  registry.py
kg_pipeline/prompts/: phase01_document_normalization.txt  phase02_sentence_preparation.txt  phase03_entity_extraction.txt  phase04_entity_canonicalization.txt  phase05_np_grouping.txt  phase06_relation_extraction.txt  phase07_srl.txt  phase08_role_alignment.txt  phase09_predicate_mapping.txt  phase10_rdf_generation.txt  phase11_validation_repair.txt
kg_pipeline/prompts_agro/: phase01_document_normalization.txt  phase03_entity_extraction.txt  phase04_entity_canonicalization.txt  phase05_np_grouping.txt  phase06_relation_extraction.txt  phase08_role_alignment.txt  phase09_predicate_mapping.txt  phase11_validation_repair.txt
kg_pipeline/services/: artifact_store.py  llm_client.py  prompt_loader.py  uri_minter.py
kg_pipeline/stages/: __init__.py  phase00_schema_bootstrap.py  phase01_document_normalization.py  phase02_sentence_preparation.py  phase03_entity_extraction.py  phase04_entity_canonicalization.py  phase05_np_grouping.py  phase06_relation_extraction.py  phase07_srl.py  phase08_role_alignment.py  phase09_predicate_mapping.py  phase10_rdf_generation.py  phase11_validation_repair.py  phase12_export.py
kg_pipeline/storage/: file_store.py  json_store.py
kg_pipeline/tests/: test_artifacts.py  test_config.py  test_end_to_end.py  test_orchestrator.py  (+2 more)
(+9 files in other folders)
